--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -1,10 +1,65 @@
 .navbar {
   background-color: $theme-color-dark;
   color: $theme-color-bright;
-  position: relative;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0;
   user-select: none;
+  display: table;
+  height: 70px;
+
+  .navbar-title {
+    img {
+      margin: auto;
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+  }
+
+  .navbar-search {
+    display: flex;
+    height: 35px;
+    width: 500px;
+    border-radius: 5px;
+    overflow: hidden;
+
+    .navbar-search-category-toggler {
+      min-width: 60px;
+      height: 100%;
+      background-color: gray;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .navbar-search-selected-category {
+        &::after {
+          content: " ";
+        }
+      }
+    }
+
+    form {
+      width: 100%;
+
+      input {
+        font-size: 1rem;
+        height: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        background-color: white;
+        border: none;
+        outline: none;
+      }
+    }
+
+    .navbar-search-magnifier {
+      background-color: green;
+      width: 40px;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+  }
 }
