--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -6,13 +6,26 @@
   display: table;
   height: 70px;
 
-  .navbar-title {
-    img {
-      margin: auto;
-      width: 50px;
-      height: 50px;
-      object-fit: cover;
-      border-radius: 10px;
+  .navbar-title-container {
+    width: 300px;
+
+    .navbar-title {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+
+      h1 {
+        margin: 0 0;
+        padding: 0 0;
+      }
+
+      img {
+        margin: auto;
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 10px;
+      }
     }
   }
 
@@ -22,6 +35,9 @@
     width: 500px;
     border-radius: 5px;
     overflow: hidden;
+    margin: auto;
+    width: 100%;
+    max-width: 1000px;
 
     .navbar-search-category-toggler {
       min-width: 60px;
@@ -30,6 +46,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
 
       .navbar-search-selected-category {
         &::after {
@@ -60,6 +77,27 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
+    }
+  }
+
+  .navbar-commands {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 1vw;
+
+    .navbar-command {
+      padding: 0 10px;
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+
+      .navbar-command-icon {
+        margin: auto;
+      }
+
+      label {
+        margin: auto;
+      }
     }
   }
 }
