--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -80,16 +80,44 @@
     }
   }
 
+  $navbar-command-transition: 0.2s;
+
   .navbar-commands {
     display: flex;
     justify-content: flex-end;
-    padding: 0 1vw;
 
     .navbar-command {
-      padding: 0 10px;
       display: flex;
       flex-direction: column;
       cursor: pointer;
+      padding: 5px 5px;
+      margin: 10px 10px;
+      border-radius: 10px;
+      position: relative;
+      transition: $navbar-command-transition;
+
+      &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        left: 0;
+        background-color: white;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all $navbar-command-transition ease-in-out;
+      }
+
+      &:hover::before {
+        visibility: visible;
+        transform: scaleX(1);
+      }
+
+      &:hover {
+        background-color: $theme-color-darker;
+        transition: $navbar-command-transition;
+      }
 
       .navbar-command-icon {
         margin: auto;
@@ -97,6 +125,7 @@
 
       label {
         margin: auto;
+        cursor: inherit;
       }
     }
   }
