--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 
 @import "../app.scss";
 
+@import "../view/components//Modal/modal.scss";
 @import "../view/components/NavBar/navbar.scss";
 @import "../view/components/Footer/footer.scss";
 
