completed the modal login

--- a/src/view/components/Buttons/buttons.scss
+++ b/src/view/components/Buttons/buttons.scss
@@ -1,10 +1,9 @@
 .button-submit {
-  border: 2px solid #2a838d;
+  border: none;
   background-color: #2a838d;
   border-radius: 3px;
-  width: 250px;
   margin: 0 auto;
-  padding: 2px 0;
+  padding: 5px 0;
   transition: transform 0.2s;
   user-select: none;
   outline-width: 0;
