added the ui header

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 @import "../view/components/NavBar/navbar.scss";
 @import "../view/components/Footer/footer.scss";
 
+@import "../view/pages/Home/home.scss";
+
 .table-cell-center {
   display: table-cell;
   height: 100%;
