--- a/src/view/pages/Home/Header/header.scss
+++ b/src/view/pages/Home/Header/header.scss
@@ -1,16 +1,3 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
-  background: #000;
-}
-
 $numOfParts: 4;
 $animTime: 1s;
 $stagger: 0.08s;
@@ -19,9 +6,19 @@ $maxLettersStagger: 6;
 $letterStagger: 0.1s;
 
 .slider {
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  background: #000;
   overflow: hidden;
   position: relative;
-  height: 100vh;
+  height: 380px;
   color: #fff;
 
   @mixin sliderReady {
