added forgot password modal

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,6 @@
 $theme-color-dark: #02203c;
 $theme-color-darker: #021a31;
+$theme-color-dark-brighter: #033563;
 $theme-color-bright: #f6f9fc;
 
 $footer-height: 60px;
