added zooming style for the card

--- a/src/view/components/Cards/cards.scss
+++ b/src/view/components/Cards/cards.scss
@@ -5,11 +5,12 @@
   background-color: gray;
   border-radius: 5px;
   cursor: pointer;
-  transition: 0.2s;
+  transition: 0.3s;
 
   &:hover {
-    box-shadow: 1px 1px 5px;
-    transition: 0.2s;
+    box-shadow: 0px 0px 5px;
+    transform: scale(1.02);
+    transition: 0.3s;
   }
 
   img {
