--- a/src/view/components/Cards/cards.scss
+++ b/src/view/components/Cards/cards.scss
@@ -6,6 +6,9 @@
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  z-index: 10;
+  overflow: hidden;
+  margin: 10px 10px;
 
   &:hover {
     box-shadow: 0px 0px 5px;
@@ -17,7 +20,6 @@
     width: 100%;
     height: 52%;
     object-fit: cover;
-    display: block;
   }
 
   .cards-featured-merch-details {
@@ -25,7 +27,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 48%;
-    padding: 5px 12px;
+    padding: 5px 12px 15px 12px;
     box-sizing: border-box;
 
     h2 {
