--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -3,11 +3,15 @@
   color: $theme-color-bright;
   width: 100%;
   user-select: none;
-  display: table;
+  display: flex;
+  align-items: center;
   height: 70px;
+  justify-content: space-between;
 
   .navbar-title-container {
     width: 300px;
+    align-items: center;
+    display: flex;
 
     .navbar-title {
       width: 100%;
@@ -30,14 +34,13 @@
   }
 
   .navbar-search {
+    $navbar-search-height: 50%;
+    $navbar-search-border-radius: 5px;
+
     display: flex;
-    height: 35px;
-    width: 500px;
-    border-radius: 5px;
-    overflow: hidden;
-    margin: auto;
-    width: 100%;
-    max-width: 1000px;
+    min-width: 40vw;
+    height: 100%;
+    align-items: center;
 
     .navbar-search-category-toggler {
       min-width: 60px;
@@ -47,6 +50,9 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
+      height: $navbar-search-height;
+      border-top-left-radius: $navbar-search-border-radius;
+      border-bottom-left-radius: $navbar-search-border-radius;
 
       .navbar-search-selected-category {
         &::after {
@@ -57,6 +63,7 @@
 
     form {
       width: 100%;
+      height: $navbar-search-height;
 
       input {
         font-size: 1rem;
@@ -70,6 +77,7 @@
     }
 
     .navbar-search-magnifier {
+      height: $navbar-search-height;
       background-color: green;
       width: 40px;
       background-color: white;
@@ -77,6 +85,8 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
+      border-top-right-radius: $navbar-search-border-radius;
+      border-bottom-right-radius: $navbar-search-border-radius;
     }
   }
 
@@ -84,7 +94,6 @@
 
   .navbar-commands {
     display: flex;
-    justify-content: flex-end;
 
     .navbar-command {
       display: flex;
