added ripple effect

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -6,3 +6,7 @@ $theme-color-bright: #f6f9fc;
 $footer-height: 60px;
 
 $standard-max-width: 1800px;
+
+$z-index-modal: 100;
+$z-index-highest: 10;
+$z-index-second-highest: 9;
