--- a/src/view/components/Buttons/buttons.scss
+++ b/src/view/components/Buttons/buttons.scss
@@ -22,3 +22,32 @@
     transition: 0.1s;
   }
 }
+
+.ripple {
+  position: relative;
+  overflow: hidden;
+
+  .ripple-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    @keyframes ripple {
+      to {
+        opacity: 0;
+        transform: scale(2);
+      }
+    }
+
+    span {
+      transform: scale(0);
+      border-radius: 100%;
+      position: absolute;
+      opacity: 0.75;
+      background-color: #ffffff;
+      animation: ripple 650ms;
+    }
+  }
+}
