added currency conversion feature

--- a/src/view/components/Modal/modal.scss
+++ b/src/view/components/Modal/modal.scss
@@ -39,6 +39,15 @@
       }
     }
 
+    .modal-settings {
+      padding: 30px 30px;
+      width: 300px;
+
+      .modal-settings-currency-select {
+        margin-top: 10px;
+      }
+    }
+
     .modal-login {
       width: 300px;
       padding: 30px 30px;
