--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 @import "../view/components/NavBar/navbar.scss";
 @import "../view/components/Footer/footer.scss";
 @import "../view/components/Cards/cards.scss";
-
+@import "../view/components/Dropdown/dropdown.scss";
 @import "../view/pages/Home/home.scss";
 
 .table-cell-center {
