added the horizontally scrollable merch display

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,3 +10,5 @@ $standard-max-width: 1800px;
 $z-index-modal: 100;
 $z-index-highest: 10;
 $z-index-second-highest: 9;
+
+$transition-standard: 0.2s;
