--- a/src/view/pages/Home/home.scss
+++ b/src/view/pages/Home/home.scss
@@ -1,4 +1,5 @@
 @import "./Header/header.scss";
+@import "./Merchandise/merchandise.scss";
 
 .home-main {
   max-width: $standard-max-width;
@@ -9,6 +10,10 @@
     flex-wrap: wrap;
     margin-top: -240px;
     justify-content: space-evenly;
+  }
+
+  .home-main-padded {
+    margin: 0 20px;
   }
 }
 
