added the merchandise scrollable groups with cards

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,8 @@
 @import "../view/components/Footer/footer.scss";
 @import "../view/components/Cards/cards.scss";
 @import "../view/components/Dropdown/dropdown.scss";
+@import "../view/components/Searches/searches.scss";
+
 @import "../view/pages/Home/home.scss";
 
 .table-cell-center {
