--- a/src/view/pages/Home/Merchandise/merchandise.scss
+++ b/src/view/pages/Home/Merchandise/merchandise.scss
@@ -1,5 +1,49 @@
 .home-merchs {
+  .home-merchs-display {
+    .home-merchs-display-tab-panel {
+      $home-merchs-display-tab-item-space: 10px;
+
+      border-bottom: 2px solid lightgray;
+      padding: 10px 0;
+      font-size: 20px;
+      font-weight: bold;
+      color: $theme-color-dark-brighter;
+
+      .home-merchs-display-tab-items-wrapper {
+        display: flex;
+        flex-direction: row;
+        margin: 0 -$home-merchs-display-tab-item-space;
+
+        .home-merchs-display-tab-item {
+          margin: 0 $home-merchs-display-tab-item-space;
+          cursor: pointer;
+          user-select: none;
+
+          &.home-merchs-display-tab-item-active {
+            @include highlight-content-on-hover(
+              $theme-color-dark-brighter,
+              3px,
+              $transition-standard,
+              true
+            );
+          }
+
+          &.home-merchs-display-tab-item-inactive {
+            @include highlight-content-on-hover(
+              $theme-color-dark-brighter,
+              1px,
+              $transition-standard,
+              false
+            );
+          }
+        }
+      }
+    }
+  }
+
   .home-merchs-group {
+    $home-merchs-group-background-color: white;
+
     .home-merch-headline-wrapper {
       display: flex;
       align-items: center;
@@ -32,7 +76,7 @@
 
       overflow: auto;
       white-space: nowrap;
-      background-color: white;
+      background-color: $home-merchs-group-background-color;
 
       .home-merch-card-rounded {
         $home-merch-card-rounded-size: 250px;
@@ -44,6 +88,12 @@
         margin: 10px 10px;
         cursor: pointer;
         position: relative;
+        transition: $transition-standard;
+
+        &:hover {
+          transform: scale(1.05);
+          transition: $transition-standard;
+        }
 
         .home-merch-card-rounded-img-wrapper {
           height: 100%;
@@ -70,6 +120,7 @@
           left: 0;
           right: 0;
           text-align: center;
+          background-color: $home-merchs-group-background-color;
         }
       }
 
