--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -105,23 +105,11 @@
       position: relative;
       transition: $navbar-command-transition;
 
-      &:before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        bottom: 0;
-        left: 0;
-        background-color: white;
-        visibility: hidden;
-        transform: scaleX(0);
-        transition: all $navbar-command-transition ease-in-out;
-      }
-
-      &:hover::before {
-        visibility: visible;
-        transform: scaleX(1);
-      }
+      @include highlight-content-on-hover(
+        white,
+        1px,
+        $navbar-command-transition
+      );
 
       &:hover {
         background-color: $theme-color-darker;
