navbar and featured merches on mobile

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -12,3 +12,7 @@ $z-index-highest: 10;
 $z-index-second-highest: 9;
 
 $transition-standard: 0.2s;
+
+$desktop-limit: 1500px;
+$tablet-limit: 1100px;
+$mobile-limit: 600px;
