--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -8,10 +8,20 @@
   height: 70px;
   justify-content: space-between;
 
+  .navbar-search {
+    @media screen and (max-width: $mobile-limit) {
+      display: none;
+    }
+  }
+
   .navbar-title-container {
     width: 300px;
     align-items: center;
     display: flex;
+
+    @media screen and (max-width: $tablet-limit) {
+      width: 100px;
+    }
 
     .navbar-title {
       width: 100%;
@@ -21,6 +31,10 @@
       h1 {
         margin: 0 0;
         padding: 0 0;
+
+        @media screen and (max-width: $tablet-limit) {
+          display: none;
+        }
       }
 
       img {
@@ -30,63 +44,6 @@
         object-fit: cover;
         border-radius: 10px;
       }
-    }
-  }
-
-  .navbar-search {
-    $navbar-search-height: 50%;
-    $navbar-search-border-radius: 5px;
-
-    display: flex;
-    min-width: 40vw;
-    height: 100%;
-    align-items: center;
-
-    .navbar-search-category-toggler {
-      min-width: 60px;
-      height: 100%;
-      background-color: gray;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      height: $navbar-search-height;
-      border-top-left-radius: $navbar-search-border-radius;
-      border-bottom-left-radius: $navbar-search-border-radius;
-
-      .navbar-search-selected-category {
-        &::after {
-          content: " ";
-        }
-      }
-    }
-
-    form {
-      width: 100%;
-      height: $navbar-search-height;
-
-      input {
-        font-size: 1rem;
-        height: 100%;
-        width: 100%;
-        box-sizing: border-box;
-        background-color: white;
-        border: none;
-        outline: none;
-      }
-    }
-
-    .navbar-search-magnifier {
-      height: $navbar-search-height;
-      background-color: green;
-      width: 40px;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      border-top-right-radius: $navbar-search-border-radius;
-      border-bottom-right-radius: $navbar-search-border-radius;
     }
   }
 
@@ -125,5 +82,72 @@
         cursor: inherit;
       }
     }
+  }
+}
+
+.navbar-search.navbar-search-mobile {
+  margin: 10px 10px;
+
+  @media screen and (min-width: $mobile-limit) {
+    display: none;
+  }
+}
+
+.navbar-search {
+  $navbar-search-height: 35px;
+  $navbar-search-border-radius: 5px;
+
+  display: flex;
+  min-width: 40vw;
+  height: 100%;
+  align-items: center;
+
+  .navbar-search-category-toggler {
+    min-width: 60px;
+    height: 100%;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: $navbar-search-height;
+    border-top-left-radius: $navbar-search-border-radius;
+    border-bottom-left-radius: $navbar-search-border-radius;
+
+    .navbar-search-selected-category {
+      &::after {
+        content: " ";
+      }
+    }
+  }
+
+  form {
+    width: 100%;
+    height: $navbar-search-height;
+
+    input {
+      font-size: 1rem;
+      height: 100%;
+      width: 100%;
+      box-sizing: border-box;
+      background-color: white;
+      border: none;
+      outline: none;
+      margin: 0 0;
+      color: black;
+    }
+  }
+
+  .navbar-search-magnifier {
+    height: $navbar-search-height;
+    background-color: green;
+    width: 40px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-top-right-radius: $navbar-search-border-radius;
+    border-bottom-right-radius: $navbar-search-border-radius;
   }
 }
