--- a/src/view/pages/Home/home.scss
+++ b/src/view/pages/Home/home.scss
@@ -5,32 +5,29 @@
   max-width: $standard-max-width;
   margin: auto;
 
-  .home-featured-merchs {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -240px;
-    justify-content: space-evenly;
+  @media only screen and (min-width: $desktop-limit) {
+    .home-featured-merchs {
+      display: flex;
+      margin-top: -240px;
+      justify-content: space-between;
+
+      .home-ripple-featured-card {
+        z-index: $z-index-second-highest;
+        cursor: pointer;
+        transition: 0.3s;
+        border-radius: 5px;
+
+        &:hover {
+          box-shadow: 0px 0px 5px;
+          transform: scale(1.05);
+          transition: 0.3s;
+          z-index: $z-index-highest;
+        }
+      }
+    }
   }
 
   .home-main-padded {
     margin: 0 20px;
-  }
-}
-
-.home-ripple-featured-card {
-  z-index: $z-index-highest;
-  cursor: pointer;
-  transition: 0.3s;
-  margin: 10px 10px;
-  border-radius: 5px;
-
-  &:hover {
-    box-shadow: 0px 0px 5px;
-    transform: scale(1.05);
-    transition: 0.3s;
-  }
-
-  &:active {
-    transform: scale(1.02);
   }
 }
