--- a/src/view/pages/Home/Header/header.scss
+++ b/src/view/pages/Home/Header/header.scss
@@ -5,6 +5,48 @@ $sliderReadyTrans: all $animTime/2 $animTime;
 $maxLettersStagger: 6;
 $letterStagger: 0.1s;
 
+.home-header-mobile {
+  @media screen and (min-width: $tablet-limit) {
+    display: none;
+  }
+
+  .home-header-mobile-item {
+    margin: 10px;
+    position: relative;
+    background-color: #000;
+
+    img {
+      display: block;
+      margin: auto;
+      width: 100%;
+      height: 80px;
+      object-fit: cover;
+      opacity: 0.7;
+    }
+
+    .home-header-mobile-item-label {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      h4 {
+        color: white;
+        text-shadow: 0px 0px 2px #000;
+        margin: 0 auto;
+
+        text-align: center;
+      }
+
+      label {
+        color: white;
+        text-align: center;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
 .slider {
   // Variables for easy customization
   $home-header-top-heading: 60px;
@@ -28,6 +70,10 @@ $letterStagger: 0.1s;
   color: #fff;
   background: transparent;
   user-select: none;
+
+  @media screen and (max-width: $tablet-limit) {
+    display: none;
+  }
 
   .home-header-gradient {
     position: absolute;
