--- a/src/view/components/Cards/cards.scss
+++ b/src/view/components/Cards/cards.scss
@@ -4,10 +4,15 @@
   background-color: gray;
   overflow: hidden;
 
-  img {
+  .cards-featured-merch-image-container {
     width: 100%;
     height: 52%;
-    object-fit: cover;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .cards-featured-merch-details {
