--- a/src/view/pages/Home/home.scss
+++ b/src/view/pages/Home/home.scss
@@ -1,31 +1,10 @@
 @import "./Header/header.scss";
 @import "./Merchandise/merchandise.scss";
+@import "./FeaturedMerchandise/featuredMerchandise.scss";
 
 .home-main {
   max-width: $standard-max-width;
   margin: auto;
-
-  @media only screen and (min-width: $desktop-limit) {
-    .home-featured-merchs {
-      display: flex;
-      margin-top: -240px;
-      justify-content: space-between;
-
-      .home-ripple-featured-card {
-        z-index: $z-index-second-highest;
-        cursor: pointer;
-        transition: 0.3s;
-        border-radius: 5px;
-
-        &:hover {
-          box-shadow: 0px 0px 5px;
-          transform: scale(1.05);
-          transition: 0.3s;
-          z-index: $z-index-highest;
-        }
-      }
-    }
-  }
 
   .home-main-padded {
     margin: 0 20px;
