--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "../view/components/Dropdown/dropdown.scss";
 @import "../view/components/Searches/searches.scss";
 @import "../view/components/Paypal/paypal.scss";
+@import "../view/components/Slideshows/slideshows.scss";
 
 @import "../view/pages/Home/home.scss";
 @import "../view/pages/Cart/cart.scss";
