--- a/src/view/components/Modal/modal.scss
+++ b/src/view/components/Modal/modal.scss
@@ -48,6 +48,7 @@
     .modal-close {
       position: absolute;
       top: 0;
+      width: auto;
       right: 0;
       margin: 10px 10px;
       text-decoration: none;
@@ -83,7 +84,7 @@
       padding: 30px 30px;
 
       h2 {
-        margin: 0 0;
+        margin: 0 -15px;
       }
 
       form {
@@ -101,6 +102,7 @@
             outline-width: 0px;
             box-sizing: border-box;
           }
+
         }
 
         .modal-login-submit {
