--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -133,6 +133,42 @@
       &::after {
         content: " ";
       }
+      .dropdown-menu{
+        min-width: 15em;
+        position: relative;
+        margin: 2em;
+      }
+      .dropdown-menu *{
+        box-sizing: border-box;
+      }
+      .select{
+        background: #2a2f3b;
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 2px #2a2f3b solid;
+        border-radius: 0.5em;
+        padding: 1em;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
+      .select-clicked{
+        border: 2px #26489a solid;
+        box-shadow: 0 0 0.8em #26489a;
+      }
+      .select:hober{
+        background: #323741;
+      }
+      .dropdown.categories{
+        list-style: none;
+        padding: 0.2em 0.5em;
+        background: #323741;
+        border: 1px #363a43 solid;
+        box-shadow: 0 0.5em 1em rgba(0,0,0,0.2);
+        border-radius: 0.5em;
+        color: #9fa5b5;
+      }
     }
   }
 
@@ -165,4 +201,13 @@
     border-top-right-radius: $navbar-search-border-radius;
     border-bottom-right-radius: $navbar-search-border-radius;
   }
+
+  li{
+    background-color: gray;
+    color: white;
+
+    &:hover{
+      background-color: black;
+    }
+  } 
 }
