removed list style

--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -205,9 +205,13 @@
   li{
     background-color: gray;
     color: white;
+    list-style: none;
 
     &:hover{
       background-color: black;
     }
-  } 
+    &:active{
+      background-color: red;
+    }
+  }
 }
