--- a/src/view/components/NavBar/navbar.scss
+++ b/src/view/components/NavBar/navbar.scss
@@ -202,6 +202,10 @@
     border-bottom-right-radius: $navbar-search-border-radius;
   }
 
+  ul{
+    position: absolute;
+  }
+
   li{
     background-color: gray;
     color: white;
