--- a/src/view/pages/Home/Merchandise/merchandise.scss
+++ b/src/view/pages/Home/Merchandise/merchandise.scss
@@ -151,6 +151,14 @@
           }
         }
 
+        &:hover {
+          .home-merch-card-standard-image-container {
+            img {
+              transform: scale(1.1);
+            }
+          }
+        }
+
         .home-merch-card-standard-image-container {
           width: 100%;
           height: $home-merch-card-thumbnail-height-proportion;
