added product page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "../view/components/Searches/searches.scss";
 
 @import "../view/pages/Home/home.scss";
+@import "../view/pages/Product/product.scss";
 
 .table-cell-center {
   display: table-cell;
