--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -45,3 +45,31 @@
     }
   }
 }
+
+@mixin flex($fd: null, $ai: null, $jc: null, $gap: null) {
+  display: flex;
+
+  @if $fd != null {
+      flex-direction: $fd;
+  }
+  @if $ai != null {
+      align-items: $ai;
+  }
+  @if $jc != null {
+      justify-content: $jc;
+  }
+  @if $gap != null {
+      gap: $gap;
+  }
+}
+
+@mixin medium {
+  @media (max-width: 950px) {
+      @content;
+  }
+}
+@mixin mobile {
+  @media (max-width: 450px) {
+      @content;
+  }
+}
