--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,8 @@
 
 @import "../view/components/Buttons/buttons.scss";
 @import "../view/components//Modal/modal.scss";
-@import "../view/components/NavBar/navbar.scss";
+// @import "../view/components/NavBar/navbar.scss";
+@import "../view/components/NavBarV2/navbar.scss";
 @import "../view/components/Footer/footer.scss";
 @import "../view/components/Cards/cards.scss";
 @import "../view/components/Dropdown/dropdown.scss";
