draft for home page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 @import "../view/pages/Product/product.scss";
 @import "../view/pages/Cart/cart.scss";
 @import "../view/pages/CheckOut/checkOut.scss";
+@import "../view/pages/Main/main.scss";
 
 .table-cell-center {
   display: table-cell;
