--- a/src/view/pages/Product/product.scss
+++ b/src/view/pages/Product/product.scss
@@ -199,3 +199,12 @@
         }
     }
 }
+
+.product-cards {
+
+    &-list {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+}
