--- a/src/view/pages/Cart/cart.scss
+++ b/src/view/pages/Cart/cart.scss
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,900);
-@import url(https://i.icomoon.io/public/c88de6d4a5/CartIcons/style.css);
+//@import url(https://i.icomoon.io/public/c88de6d4a5/CartIcons/style.css);
 .cf:before, .cf:after {
   content: "\0020";
   display: block;
