--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,9 @@
 
 @import "../app.scss";
 
+@import "../view/modal/modal.scss";
+
 @import "../view/components/Buttons/buttons.scss";
-@import "../view/components//Modal/modal.scss";
 // @import "../view/components/NavBar/navbar.scss";
 @import "../view/components/NavBarV2/navbar.scss";
 @import "../view/components/Footer/footer.scss";
