--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "../view/components/Slideshows/slideshows.scss";
 @import "../view/components/SearchFilter/searchfilter.scss";
 @import "../view/components/Separator/separator.scss";
+@import "../view/components/Inputs/inputs.scss";
 
 @import "../view/pages/Home/home.scss";
 @import "../view/pages/Product/product.scss";
