search filter front end

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import "../view/components/Searches/searches.scss";
 @import "../view/components/Paypal/paypal.scss";
 @import "../view/components/Slideshows/slideshows.scss";
+@import "../view/components/SearchFilter/searchfilter.scss";
 
 @import "../view/pages/Home/home.scss";
 @import "../view/pages/Product/product.scss";
